# SBERconverter

./: .env.example  .gitignore  CNAME  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
sajt/: package-lock.json  package.json
sajt/public/: index.html  manifest.json
sajt/src/: App.css  App.js
servis/: app.py  generator.py  parsery.py
src/: main.py  uvicorn_logging_config.py
src/agent/: __init__.py  main.py  message.py  state.py
src/api/: __init__.py
src/api/chat/: routers.py
src/api/v1/: routers.py  schemas.py
src/config/: __init__.py
src/config/app/: config.py
testy/: crmData.csv
