[project]
name = "converter-agent"
version = "0.1.0"
description = "Langchain project agent example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "fastui>=0.9.0",
    "langchain-gigachat==0.5.0a1",
    "langgraph>=1.1.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PIE"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = false
